# image_train

./: .coverage  .coveragerc  .env.example  .gitattributes  .gitignore  .isort.cfg  .pylintrc  DOCKERFILE  Dockerfile.cpu  Dockerfile.cuda  ML System Design Doc.md  README.md  __init__.py  app.py  docker-compose.yml  mypy.ini  pyproject-cpu.toml  pyproject-cuda.toml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: ci.yml  sync-secrets.yml
airflow/: docker-compose.yaml
airflow/dags/: batch_service_dag.py
core/: __init__.py  config.py  constants.py
db/: __init__.py  repository.py
docs/: ARCHITECTURE.md  ML_PIPELINE_USAGE.md  PLANE.md  Pilot.md  QUICK_START.md
inference/: INFERECE.md  inference.py
models/: __init__.py  schemas.py
routes/: __init__.py  debug.py  health.py  wagon.py
services/: __init__.py  aggregator.py  background_process.py  classifier.py  detector.py  job_manager.py  model_loader.py  storage.py  upload_handler.py
tests/: README.md  conftest.py
tests/integration/: test_workflows.py
tests/unit/: test_app.py  test_run_tests.py  test_schemas.py
tests/unit/core/: test_config.py
tests/unit/db/: test_repository.py
tests/unit/routes/: test_debug.py  test_health.py  test_wagon.py
tests/unit/services/: test_aggregator.py  test_background_process.py  test_classifier.py  test_detector.py  test_job_manager.py  test_model_loader.py  test_storage.py  test_upload_handler.py
train/: TRAINING_MODEL.md  train_model.py
