[tool.poetry]
name = "api"
version = "1.0.0"
description = "ML API for wagon detection and classification"
authors = ["MaxJalo"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.10"
# Core
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
python-dotenv = "1.0.0"

# Database
beanie = "1.26.0"
motor = "3.3.2"
pymongo = "4.6.0"

# ML - с CUDA 12.4
torch = {version = "2.6.0", source = "pytorch"}
torchvision = {version = "0.21.0", source = "pytorch"}
ultralytics = "8.4.15"
pillow = "10.1.0"
numpy = "2.1.0"

# Utils
python-multipart = "0.0.6"
httpx = "0.27.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
black = "^24.0"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"