[project]
name = "image_train"
version = "1.1.0"
description = "ML микросервис для классификации, детекции и агрегации данных о вагонах"
requires-python = "==3.10.19"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "beanie==1.26.0",
    "motor==3.3.2",
    "pymongo==4.6.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "ultralytics==8.4.15",
    "pillow==10.1.0",
    "numpy==2.1.0",
    "python-multipart==0.0.6",
    "httpx==0.27.0",
    "matplotlib==3.10.8",
    "opencv-python==4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["microservise"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=. --cov-report=html"